# Note

./: README.md
NoteServer/: CMakeLists.txt  Doxyfile
NoteServer/docs/html/: annotated.html  base_8cpp.html  base_8cpp__incl.dot  base_8h.html  base_8h__dep__incl.dot  base_8h__incl.dot  base_8h_source.html  classDB__service-members.html  classDB__service.html  classes.html  classserver__service-members.html  classserver__service.html  classsocket__service-members.html  classsocket__service.html  crypto_8hpp.html  crypto_8hpp__dep__incl.dot  crypto_8hpp__incl.dot  crypto_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.dot  menudata.js  path__util_8hpp.html  path__util_8hpp__dep__incl.dot  path__util_8hpp__incl.dot  path__util_8hpp_source.html  server_8hpp.html  server_8hpp__dep__incl.dot  server_8hpp__incl.dot  server_8hpp_source.html  socket__service_8hpp.html  socket__service_8hpp__dep__incl.dot  (+2 more)
NoteServer/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  variables_0.js
NoteServer/docs/latex/: annotated.tex  base_8cpp.tex  base_8cpp.tex.tmp  base_8cpp__incl.dot  base_8h.tex  base_8h__dep__incl.dot  base_8h__incl.dot  classDB__service.tex  classserver__service.tex  classsocket__service.tex  crypto_8hpp.tex  crypto_8hpp__dep__incl.dot  crypto_8hpp__incl.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  main_8cpp.tex  main_8cpp__incl.dot  path__util_8hpp.tex  path__util_8hpp__dep__incl.dot  path__util_8hpp__incl.dot  refman.tex  server_8hpp.tex  server_8hpp__dep__incl.dot  server_8hpp__incl.dot  socket__service_8hpp.tex  socket__service_8hpp__dep__incl.dot  socket__service_8hpp__incl.dot
NoteServer/libs/cryptopp/: .gitignore
NoteServer/libs/libpqxx/: Makefile.in  NEWS  aclocal.m4  configure
NoteServer/libs/libpqxx/config/: Makefile.in
NoteServer/libs/libpqxx/doc/: Makefile.in
NoteServer/libs/libpqxx/include/: CMakeLists.txt  Makefile.am  Makefile.in
NoteServer/libs/libpqxx/src/: Makefile.in  array.cxx  connection.cxx  row.cxx  stream_from.cxx  stream_to.cxx  subtransaction.cxx  transaction_base.cxx
NoteServer/libs/libpqxx/test/: Makefile.am  (+2 more)
NoteServer/src/: base.cpp  base.h  crpt.cpp  crpt.h  crypto.hpp  main.cpp  mkdr.cpp  path_util.hpp  server.hpp  socket_service.hpp
NoteServer/tests/: db_test.cpp  server_test.cpp  soc_test.cpp
NoteServer/user_files/Nastya/: test.txt
(+5148 files in other folders)
